include/imgui_wasm_imgui.h


typedef struct ImVec2_t ImVec2;
typedef unsigned int ImGuiID;      
typedef struct ImDrawList_t ImDrawList;                              
typedef struct ImFont_t ImFont;                                      
typedef struct ImGuiPlatformIO_t ImGuiPlatformIO;                              
typedef struct ImGuiStorage_t ImGuiStorage;                                    
typedef struct ImGuiStyle_t ImGuiStyle;                                        
typedef struct ImGuiViewport_t ImGuiViewport;                                  
typedef int ImGuiKey;             
typedef int ImGuiMouseButton;     
typedef int ImGuiMouseCursor;     
typedef int ImGuiButtonFlags;       
typedef int ImGuiFocusedFlags;      
typedef int ImGuiHoveredFlags;      
typedef int ImGuiInputTextFlags;    
typedef int ImGuiItemFlags;         
typedef int ImGuiPopupFlags;        
typedef int ImGuiSelectableFlags;   
typedef int (*ImGuiInputTextCallback)(ImGuiInputTextCallbackData* data);  
CIMGUI_API ImGuiPlatformIO* igGetPlatformIO(void);      
CIMGUI_API ImGuiStyle*      igGetStyle(void);           
CIMGUI_API void             igNewFrame(void);           
CIMGUI_API void             igRender(void);             
CIMGUI_API const char* igGetVersion(void);                                      
CIMGUI_API bool           igIsWindowAppearing(void);
CIMGUI_API bool           igIsWindowCollapsed(void);
CIMGUI_API bool           igIsWindowFocused(ImGuiFocusedFlags flags );      
CIMGUI_API bool           igIsWindowHovered(ImGuiHoveredFlags flags );      
 ImGui or my application?" for details.
CIMGUI_API ImDrawList*    igGetWindowDrawList(void);                                 
CIMGUI_API float          igGetWindowDpiScale(void);                                 
CIMGUI_API ImVec2         igGetWindowPos(void);                                      
CIMGUI_API ImVec2         igGetWindowSize(void);                                     
CIMGUI_API float          igGetWindowWidth(void);                                    
CIMGUI_API float          igGetWindowHeight(void);                                   
CIMGUI_API ImGuiViewport* igGetWindowViewport(void);                                 
CIMGUI_API float igGetScrollX(void);                                                         
CIMGUI_API float igGetScrollY(void);                                                         
CIMGUI_API float igGetScrollMaxX(void);                                                      
CIMGUI_API float igGetScrollMaxY(void);                                                      
CIMGUI_API void         igPushFontFloat(ImFont* font, float font_size_base_unscaled);      
CIMGUI_API void         igPopFont(void);
CIMGUI_API void igPopStyleColor(int count );
CIMGUI_API void igPopStyleVar(int count );
CIMGUI_API void igPushItemFlag(ImGuiItemFlags option, bool enabled);      
CIMGUI_API void igPopItemFlag(void);
CIMGUI_API void  igPushItemWidth(float item_width);                           
CIMGUI_API void  igPopItemWidth(void);
CIMGUI_API void  igPushTextWrapPos(float wrap_local_pos_x );      
CIMGUI_API void  igPopTextWrapPos(void);
CIMGUI_API void  igSameLine(float offset_from_start_x , float spacing ); 
CIMGUI_API void  igNewLine(void);                              
CIMGUI_API void  igIndent(float indent_w );        
CIMGUI_API float igGetTextLineHeight(void);                    
CIMGUI_API float igGetTextLineHeightWithSpacing(void);         
CIMGUI_API void    igPushID(const char* str_id);                                       
CIMGUI_API void    igPushIDStr(const char* str_id_begin, const char* str_id_end);      
CIMGUI_API void    igPushIDPtr(const void* ptr_id);                                    
CIMGUI_API void    igPushIDInt(int int_id);                                            
CIMGUI_API void    igPopID(void);                                                      
CIMGUI_API bool igInvisibleButton(const char* str_id, ImVec2 size, ImGuiButtonFlags flags );          
CIMGUI_API bool igRadioButton(const char* label, bool active);                                                 
CIMGUI_API bool igRadioButtonIntPtr(const char* label, int* v, int v_button);                                  
CIMGUI_API void igProgressBar(float fraction, ImVec2 size_arg , const char* overlay );
CIMGUI_API bool igInputText(const char* label, char* buf, size_t buf_size, ImGuiInputTextFlags flags , ImGuiInputTextCallback callback , void* user_data );
CIMGUI_API bool igInputTextMultiline(const char* label, char* buf, size_t buf_size, ImVec2 size , ImGuiInputTextFlags flags , ImGuiInputTextCallback callback , void* user_data );
CIMGUI_API bool igInputTextWithHint(const char* label, const char* hint, char* buf, size_t buf_size, ImGuiInputTextFlags flags , ImGuiInputTextCallback callback , void* user_data );
CIMGUI_API bool igInputFloat(const char* label, float* v, float step , float step_fast , const char* format , ImGuiInputTextFlags flags );
CIMGUI_API bool igInputFloat3(const char* label, float v[3], const char* format , ImGuiInputTextFlags flags );
CIMGUI_API bool igInputFloat4(const char* label, float v[4], const char* format , ImGuiInputTextFlags flags );
CIMGUI_API bool igInputInt(const char* label, int* v, int step , int step_fast , ImGuiInputTextFlags flags );
CIMGUI_API bool igInputDouble(const char* label, double* v, double step , double step_fast , const char* format , ImGuiInputTextFlags flags );
CIMGUI_API float igGetTreeNodeToLabelSpacing(void);                                                                             
CIMGUI_API bool igSelectable(const char* label, bool selected , ImGuiSelectableFlags flags , ImVec2 size );      
CIMGUI_API bool                igIsItemToggledSelection(void);      
CIMGUI_API bool igListBox(const char* label, int* current_item, const char*const items[], int items_count, int height_in_items );
CIMGUI_API void igPlotLines(const char* label, const float* values, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size , int stride );
CIMGUI_API void igPlotHistogram(const char* label, const float* values, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size , int stride );
CIMGUI_API bool igMenuItem(const char* label, const char* shortcut , bool selected , bool enabled ); 
CIMGUI_API bool igMenuItemBoolPtr(const char* label, const char* shortcut, bool* p_selected, bool enabled ); 
CIMGUI_API void igOpenPopup(const char* str_id, ImGuiPopupFlags popup_flags );                              
CIMGUI_API void igOpenPopupID(ImGuiID id, ImGuiPopupFlags popup_flags );                                    
CIMGUI_API void igOpenPopupOnItemClick(const char* str_id , ImGuiPopupFlags popup_flags );      
CIMGUI_API bool igIsPopupOpen(const char* str_id, ImGuiPopupFlags flags );      
CIMGUI_API void  igNextColumn(void);                                       
CIMGUI_API ImGuiID igGetWindowDockID(void);                                               
CIMGUI_API bool    igIsWindowDocked(void);                                                
CIMGUI_API void igLogToTTY(int auto_open_depth );                                          
CIMGUI_API void igLogToFile(int auto_open_depth , const char* filename );      
CIMGUI_API void igLogToClipboard(int auto_open_depth );                                    
CIMGUI_API void igLogFinish(void);                                                                   
CIMGUI_API void igLogButtons(void);                                                                  
CIMGUI_API void igPushClipRect(ImVec2 clip_rect_min, ImVec2 clip_rect_max, bool intersect_with_current_clip_rect);
CIMGUI_API void igPopClipRect(void);
CIMGUI_API bool           igIsItemHovered(ImGuiHoveredFlags flags );            
CIMGUI_API bool           igIsItemActive(void);                                          
CIMGUI_API bool           igIsItemFocused(void);                                         
CIMGUI_API bool           igIsItemClicked(ImGuiMouseButton mouse_button );      
CIMGUI_API bool           igIsItemVisible(void);                                         
CIMGUI_API bool           igIsItemEdited(void);                                          
CIMGUI_API bool           igIsItemActivated(void);                                       
CIMGUI_API bool           igIsItemDeactivated(void);                                     
CIMGUI_API bool           igIsItemDeactivatedAfterEdit(void);                            
CIMGUI_API bool           igIsItemToggledOpen(void);                                     
CIMGUI_API bool           igIsAnyItemHovered(void);                                      
CIMGUI_API bool           igIsAnyItemActive(void);                                       
CIMGUI_API bool           igIsAnyItemFocused(void);                                      
CIMGUI_API ImVec2         igGetItemRectSize(void);                                       
CIMGUI_API ImGuiViewport* igGetMainViewport(void);      
CIMGUI_API bool                  igIsRectVisibleBySize(ImVec2 size);                     
CIMGUI_API bool                  igIsRectVisible(ImVec2 rect_min, ImVec2 rect_max);      
CIMGUI_API double                igGetTime(void);                                        
CIMGUI_API ImGuiStorage*         igGetStateStorage(void);
CIMGUI_API bool        igIsKeyDown(ImGuiKey key);                                                
CIMGUI_API bool        igIsKeyPressed(ImGuiKey key, bool repeat );                   
CIMGUI_API bool        igIsKeyReleased(ImGuiKey key);                                            
CIMGUI_API int         igGetKeyPressedAmount(ImGuiKey key, float repeat_delay, float rate);      
CIMGUI_API const char* igGetKeyName(ImGuiKey key);                                               
CIMGUI_API bool             igIsMouseDown(ImGuiMouseButton button);                                                          
CIMGUI_API bool             igIsMouseClicked(ImGuiMouseButton button, bool repeat );                            
CIMGUI_API bool             igIsMouseReleased(ImGuiMouseButton button);                                                      
CIMGUI_API bool             igIsMouseDoubleClicked(ImGuiMouseButton button);                                                 
CIMGUI_API bool             igIsMouseReleasedWithDelay(ImGuiMouseButton button, float delay);                                
CIMGUI_API int              igGetMouseClickedCount(ImGuiMouseButton button);                                                 
CIMGUI_API bool             igIsMouseHoveringRect(ImVec2 r_min, ImVec2 r_max, bool clip );                       
CIMGUI_API bool             igIsMousePosValid(const ImVec2* mouse_pos );                                         
CIMGUI_API bool             igIsAnyMouseDown(void);                                                                          
CIMGUI_API ImVec2           igGetMousePos(void);                                                                             
CIMGUI_API ImVec2           igGetMousePosOnOpeningCurrentPopup(void);                                                        
CIMGUI_API bool             igIsMouseDragging(ImGuiMouseButton button, float lock_threshold );                  
CIMGUI_API ImVec2           igGetMouseDragDelta(ImGuiMouseButton button , float lock_threshold );      
CIMGUI_API void             igResetMouseDragDelta(ImGuiMouseButton button );                                        
CIMGUI_API ImGuiMouseCursor igGetMouseCursor(void);                                                                          
CIMGUI_API void        igLoadIniSettingsFromDisk(const char* ini_filename);                               
CIMGUI_API void        igLoadIniSettingsFromMemory(const char* ini_data, size_t ini_size );      
CIMGUI_API void        igSaveIniSettingsToDisk(const char* ini_filename);                                 
CIMGUI_API const char* igSaveIniSettingsToMemory(size_t* out_ini_size );                      
CIMGUI_API void* igMemAlloc(size_t size);
CIMGUI_API void  igMemFree(void* ptr);
CIMGUI_API void           igRenderPlatformWindowsDefault(void* platform_render_arg , void* renderer_render_arg ); 
CIMGUI_API void   igPushFont(ImFont* font);
CIMGUI_API void   igPushButtonRepeat(bool repeat);
CIMGUI_API void   igPopButtonRepeat(void);
CIMGUI_API void   igPushTabStop(bool tab_stop);
CIMGUI_API void   igPopTabStop(void);
CIMGUI_API ImVec2 igGetWindowContentRegionMin(void);      
CIMGUI_API ImVec2 igGetWindowContentRegionMax(void);      