imgui-wasm-core/src/generated_imgui_api.rs

    #[link_name = "igGetItemRectSize"]
    fn c_igGetItemRectSize() -> ImVec2;
    #[link_name = "igGetKeyName"]
    fn c_igGetKeyName(arg0: c_int) -> *const c_char;
    #[link_name = "igGetKeyPressedAmount"]
    fn c_igGetKeyPressedAmount(arg0: c_int, arg1: f32, arg2: f32) -> c_int;
    #[link_name = "igGetMainViewport"]
    fn c_igGetMainViewport() -> *mut c_void;
    #[link_name = "igGetMouseClickedCount"]
    fn c_igGetMouseClickedCount(arg0: c_int) -> c_int;
    #[link_name = "igGetMouseCursor"]
    fn c_igGetMouseCursor() -> c_int;
    #[link_name = "igGetMouseDragDelta"]
    fn c_igGetMouseDragDelta(arg0: c_int, arg1: f32) -> ImVec2;
    #[link_name = "igGetMousePos"]
    fn c_igGetMousePos() -> ImVec2;
    #[link_name = "igGetMousePosOnOpeningCurrentPopup"]
    fn c_igGetMousePosOnOpeningCurrentPopup() -> ImVec2;
    #[link_name = "igGetPlatformIO"]
    fn c_igGetPlatformIO() -> *mut c_void;
    #[link_name = "igGetScrollMaxX"]
    fn c_igGetScrollMaxX() -> f32;
    #[link_name = "igGetScrollMaxY"]
    fn c_igGetScrollMaxY() -> f32;
    #[link_name = "igGetScrollX"]
    fn c_igGetScrollX() -> f32;
    #[link_name = "igGetScrollY"]
    fn c_igGetScrollY() -> f32;
    #[link_name = "igGetStateStorage"]
    fn c_igGetStateStorage() -> *mut c_void;
    #[link_name = "igGetStyle"]
    fn c_igGetStyle() -> *mut c_void;
    #[link_name = "igGetTextLineHeight"]
    fn c_igGetTextLineHeight() -> f32;
    #[link_name = "igGetTextLineHeightWithSpacing"]
    fn c_igGetTextLineHeightWithSpacing() -> f32;
    #[link_name = "igGetTime"]
    fn c_igGetTime() -> c_double;
    #[link_name = "igGetTreeNodeToLabelSpacing"]
    fn c_igGetTreeNodeToLabelSpacing() -> f32;
    #[link_name = "igGetVersion"]
    fn c_igGetVersion() -> *const c_char;
    #[link_name = "igGetWindowContentRegionMax"]
    fn c_igGetWindowContentRegionMax() -> ImVec2;
    #[link_name = "igGetWindowContentRegionMin"]
    fn c_igGetWindowContentRegionMin() -> ImVec2;
    #[link_name = "igGetWindowDockID"]
    fn c_igGetWindowDockID() -> c_uint;
    #[link_name = "igGetWindowDpiScale"]
    fn c_igGetWindowDpiScale() -> f32;
    #[link_name = "igGetWindowDrawList"]
    fn c_igGetWindowDrawList() -> *mut c_void;
    #[link_name = "igGetWindowHeight"]
    fn c_igGetWindowHeight() -> f32;
    #[link_name = "igGetWindowPos"]
    fn c_igGetWindowPos() -> ImVec2;
    #[link_name = "igGetWindowSize"]
    fn c_igGetWindowSize() -> ImVec2;
    #[link_name = "igGetWindowViewport"]
    fn c_igGetWindowViewport() -> *mut c_void;
    #[link_name = "igGetWindowWidth"]
    fn c_igGetWindowWidth() -> f32;
    #[link_name = "igIndent"]
    fn c_igIndent(arg0: f32) -> ();
    #[link_name = "igInputDouble"]
    fn c_igInputDouble(arg0: *const c_char, arg1: *mut c_double, arg2: c_double, arg3: c_double, arg4: *const c_char, arg5: c_int) -> bool;
    #[link_name = "igInputFloat"]
    fn c_igInputFloat(arg0: *const c_char, arg1: *mut f32, arg2: f32, arg3: f32, arg4: *const c_char, arg5: c_int) -> bool;
    #[link_name = "igInputFloat3"]
    fn c_igInputFloat3(arg0: *const c_char, arg1: *mut f32, arg2: *const c_char, arg3: c_int) -> bool;
    #[link_name = "igInputFloat4"]
    fn c_igInputFloat4(arg0: *const c_char, arg1: *mut f32, arg2: *const c_char, arg3: c_int) -> bool;
    #[link_name = "igInputInt"]
    fn c_igInputInt(arg0: *const c_char, arg1: *mut c_int, arg2: c_int, arg3: c_int, arg4: c_int) -> bool;
    #[link_name = "igInputText"]
    fn c_igInputText(arg0: *const c_char, arg1: *mut c_char, arg2: usize, arg3: c_int, arg4: *mut c_void, arg5: *mut c_void) -> bool;
    #[link_name = "igInputTextMultiline"]
    fn c_igInputTextMultiline(arg0: *const c_char, arg1: *mut c_char, arg2: usize, arg3: ImVec2, arg4: c_int, arg5: *mut c_void, arg6: *mut c_void) -> bool;
    #[link_name = "igInputTextWithHint"]
    fn c_igInputTextWithHint(arg0: *const c_char, arg1: *const c_char, arg2: *mut c_char, arg3: usize, arg4: c_int, arg5: *mut c_void, arg6: *mut c_void) -> bool;
    #[link_name = "igInvisibleButton"]
    fn c_igInvisibleButton(arg0: *const c_char, arg1: ImVec2, arg2: c_int) -> bool;
    #[link_name = "igIsAnyItemActive"]
    fn c_igIsAnyItemActive() -> bool;
    #[link_name = "igIsAnyItemFocused"]
    fn c_igIsAnyItemFocused() -> bool;
    #[link_name = "igIsAnyItemHovered"]
    fn c_igIsAnyItemHovered() -> bool;
    #[link_name = "igIsAnyMouseDown"]
    fn c_igIsAnyMouseDown() -> bool;
    #[link_name = "igIsItemActivated"]
    fn c_igIsItemActivated() -> bool;
    #[link_name = "igIsItemActive"]
    fn c_igIsItemActive() -> bool;
    #[link_name = "igIsItemClicked"]
    fn c_igIsItemClicked(arg0: c_int) -> bool;
    #[link_name = "igIsItemDeactivated"]
    fn c_igIsItemDeactivated() -> bool;
    #[link_name = "igIsItemDeactivatedAfterEdit"]
    fn c_igIsItemDeactivatedAfterEdit() -> bool;
    #[link_name = "igIsItemEdited"]
    fn c_igIsItemEdited() -> bool;
    #[link_name = "igIsItemFocused"]
    fn c_igIsItemFocused() -> bool;
    #[link_name = "igIsItemHovered"]
    fn c_igIsItemHovered(arg0: c_int) -> bool;
    #[link_name = "igIsItemToggledOpen"]
    fn c_igIsItemToggledOpen() -> bool;
    #[link_name = "igIsItemToggledSelection"]
    fn c_igIsItemToggledSelection() -> bool;
    #[link_name = "igIsItemVisible"]
    fn c_igIsItemVisible() -> bool;
    #[link_name = "igIsKeyDown"]
    fn c_igIsKeyDown(arg0: c_int) -> bool;
    #[link_name = "igIsKeyPressed"]
    fn c_igIsKeyPressed(arg0: c_int, arg1: bool) -> bool;
    #[link_name = "igIsKeyReleased"]
    fn c_igIsKeyReleased(arg0: c_int) -> bool;
    #[link_name = "igIsMouseClicked"]
    fn c_igIsMouseClicked(arg0: c_int, arg1: bool) -> bool;
    #[link_name = "igIsMouseDoubleClicked"]
    fn c_igIsMouseDoubleClicked(arg0: c_int) -> bool;
    #[link_name = "igIsMouseDown"]
    fn c_igIsMouseDown(arg0: c_int) -> bool;
    #[link_name = "igIsMouseDragging"]
    fn c_igIsMouseDragging(arg0: c_int, arg1: f32) -> bool;
    #[link_name = "igIsMouseHoveringRect"]
    fn c_igIsMouseHoveringRect(arg0: ImVec2, arg1: ImVec2, arg2: bool) -> bool;
    #[link_name = "igIsMousePosValid"]
    fn c_igIsMousePosValid(arg0: *const c_void) -> bool;
    #[link_name = "igIsMouseReleased"]
    fn c_igIsMouseReleased(arg0: c_int) -> bool;
    #[link_name = "igIsMouseReleasedWithDelay"]
    fn c_igIsMouseReleasedWithDelay(arg0: c_int, arg1: f32) -> bool;
    #[link_name = "igIsPopupOpen"]
    fn c_igIsPopupOpen(arg0: *const c_char, arg1: c_int) -> bool;
    #[link_name = "igIsRectVisible"]
    fn c_igIsRectVisible(arg0: ImVec2, arg1: ImVec2) -> bool;
    #[link_name = "igIsRectVisibleBySize"]
    fn c_igIsRectVisibleBySize(arg0: ImVec2) -> bool;
    #[link_name = "igIsWindowAppearing"]
    fn c_igIsWindowAppearing() -> bool;
    #[link_name = "igIsWindowCollapsed"]
    fn c_igIsWindowCollapsed() -> bool;
    #[link_name = "igIsWindowDocked"]
    fn c_igIsWindowDocked() -> bool;
    #[link_name = "igIsWindowFocused"]
    fn c_igIsWindowFocused(arg0: c_int) -> bool;
    #[link_name = "igIsWindowHovered"]
    fn c_igIsWindowHovered(arg0: c_int) -> bool;
    #[link_name = "igListBox"]
    fn c_igListBox(arg0: *const c_char, arg1: *mut c_int, arg2: *const *const c_char, arg3: c_int, arg4: c_int) -> bool;
    #[link_name = "igLoadIniSettingsFromDisk"]
    fn c_igLoadIniSettingsFromDisk(arg0: *const c_char) -> ();
    #[link_name = "igLoadIniSettingsFromMemory"]
    fn c_igLoadIniSettingsFromMemory(arg0: *const c_char, arg1: usize) -> ();
    #[link_name = "igLogButtons"]
    fn c_igLogButtons() -> ();
    #[link_name = "igLogFinish"]
    fn c_igLogFinish() -> ();
    #[link_name = "igLogToClipboard"]
    fn c_igLogToClipboard(arg0: c_int) -> ();
    #[link_name = "igLogToFile"]
    fn c_igLogToFile(arg0: c_int, arg1: *const c_char) -> ();
    #[link_name = "igLogToTTY"]
    fn c_igLogToTTY(arg0: c_int) -> ();
    #[link_name = "igMemAlloc"]
    fn c_igMemAlloc(arg0: usize) -> *mut c_void;
    #[link_name = "igMemFree"]
    fn c_igMemFree(arg0: *mut c_void) -> ();
    #[link_name = "igMenuItem"]
    fn c_igMenuItem(arg0: *const c_char, arg1: *const c_char, arg2: bool, arg3: bool) -> bool;
    #[link_name = "igMenuItemBoolPtr"]
    fn c_igMenuItemBoolPtr(arg0: *const c_char, arg1: *const c_char, arg2: *mut bool, arg3: bool) -> bool;
    #[link_name = "igNewFrame"]
    fn c_igNewFrame() -> ();
    #[link_name = "igNewLine"]
    fn c_igNewLine() -> ();
    #[link_name = "igNextColumn"]
    fn c_igNextColumn() -> ();
    #[link_name = "igOpenPopup"]
    fn c_igOpenPopup(arg0: *const c_char, arg1: c_int) -> ();
    #[link_name = "igOpenPopupID"]
    fn c_igOpenPopupID(arg0: c_uint, arg1: c_int) -> ();
    #[link_name = "igOpenPopupOnItemClick"]
    fn c_igOpenPopupOnItemClick(arg0: *const c_char, arg1: c_int) -> ();
    #[link_name = "igPlotHistogram"]
    fn c_igPlotHistogram(arg0: *const c_char, arg1: *const f32, arg2: c_int, arg3: c_int, arg4: *const c_char, arg5: f32, arg6: f32, arg7: ImVec2, arg8: c_int) -> ();
    #[link_name = "igPlotLines"]
    fn c_igPlotLines(arg0: *const c_char, arg1: *const f32, arg2: c_int, arg3: c_int, arg4: *const c_char, arg5: f32, arg6: f32, arg7: ImVec2, arg8: c_int) -> ();
    #[link_name = "igPopButtonRepeat"]
    fn c_igPopButtonRepeat() -> ();
    #[link_name = "igPopClipRect"]
    fn c_igPopClipRect() -> ();
    #[link_name = "igPopFont"]
    fn c_igPopFont() -> ();
    #[link_name = "igPopID"]
    fn c_igPopID() -> ();
    #[link_name = "igPopItemFlag"]
    fn c_igPopItemFlag() -> ();
    #[link_name = "igPopItemWidth"]
    fn c_igPopItemWidth() -> ();
    #[link_name = "igPopStyleColor"]
    fn c_igPopStyleColor(arg0: c_int) -> ();
    #[link_name = "igPopStyleVar"]
    fn c_igPopStyleVar(arg0: c_int) -> ();
    #[link_name = "igPopTabStop"]
    fn c_igPopTabStop() -> ();
    #[link_name = "igPopTextWrapPos"]
    fn c_igPopTextWrapPos() -> ();
    #[link_name = "igProgressBar"]
    fn c_igProgressBar(arg0: f32, arg1: ImVec2, arg2: *const c_char) -> ();
    #[link_name = "igPushButtonRepeat"]
    fn c_igPushButtonRepeat(arg0: bool) -> ();
    #[link_name = "igPushClipRect"]
    fn c_igPushClipRect(arg0: ImVec2, arg1: ImVec2, arg2: bool) -> ();
    #[link_name = "igPushFont"]
    fn c_igPushFont(arg0: *mut c_void) -> ();
    #[link_name = "igPushFontFloat"]
    fn c_igPushFontFloat(arg0: *mut c_void, arg1: f32) -> ();
    #[link_name = "igPushID"]
    fn c_igPushID(arg0: *const c_char) -> ();
    #[link_name = "igPushIDInt"]
    fn c_igPushIDInt(arg0: c_int) -> ();
    #[link_name = "igPushIDPtr"]
    fn c_igPushIDPtr(arg0: *const c_void) -> ();
    #[link_name = "igPushIDStr"]
    fn c_igPushIDStr(arg0: *const c_char, arg1: *const c_char) -> ();
    #[link_name = "igPushItemFlag"]
    fn c_igPushItemFlag(arg0: c_int, arg1: bool) -> ();
    #[link_name = "igPushItemWidth"]
    fn c_igPushItemWidth(arg0: f32) -> ();
    #[link_name = "igPushTabStop"]
    fn c_igPushTabStop(arg0: bool) -> ();
    #[link_name = "igPushTextWrapPos"]
    fn c_igPushTextWrapPos(arg0: f32) -> ();
    #[link_name = "igRadioButton"]
    fn c_igRadioButton(arg0: *const c_char, arg1: bool) -> bool;
    #[link_name = "igRadioButtonIntPtr"]
    fn c_igRadioButtonIntPtr(arg0: *const c_char, arg1: *mut c_int, arg2: c_int) -> bool;
    #[link_name = "igRender"]
    fn c_igRender() -> ();
    #[link_name = "igRenderPlatformWindowsDefault"]
    fn c_igRenderPlatformWindowsDefault(arg0: *mut c_void, arg1: *mut c_void) -> ();
    #[link_name = "igResetMouseDragDelta"]
    fn c_igResetMouseDragDelta(arg0: c_int) -> ();
    #[link_name = "igSameLine"]
    fn c_igSameLine(arg0: f32, arg1: f32) -> ();
    #[link_name = "igSaveIniSettingsToDisk"]
    fn c_igSaveIniSettingsToDisk(arg0: *const c_char) -> ();
    #[link_name = "igSaveIniSettingsToMemory"]
    fn c_igSaveIniSettingsToMemory(arg0: *mut usize) -> *const c_char;
    #[link_name = "igSelectable"]
    fn c_igSelectable(arg0: *const c_char, arg1: bool, arg2: c_int, arg3: ImVec2) -> bool;
